--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf www/ || true",
-    "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
+    "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www\\tmp && cd www && zip -r Archive.zip . && cd ..",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts"
   },
   "repository": {
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "jimp": "^0.6.4",
-    "sequelize": "^5.21.11"
+    "jimp": "^0.13.0",
+    "url-exists": "^1.0.3"
   }
 }
